--- a/design-details/power.tex
+++ b/design-details/power.tex
@@ -1,4 +1,5 @@
 \subsection{Power Subsystem}
+\label{sec:power_subsystem}
 \begin{figure}[H]
     \centering
     \caption{Power subsystem block diagram}
