--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -64,7 +64,7 @@ the above criteria and are being considered for selection.
 		\hline
 		\textbf{ADC} & 8-channel, 12-bit & 4-channel, 12-bit & 4-channel, 12-bit & 8-channel, 12-bit & 16-channel, 12-bit \\
 		\hline
-		\textbf{Clock capability} & Timer, RTC & Timer, RTC, WDT & Timer, RTC, WDT & Timer, RTC, WDT & Timer, RTC, WDT \\
+		\textbf{Watchdog timer?} & No & Yes & Yes & Yes & Yes \\
 		\hline
 		\textbf{GPIO (pins)} & 31 & 29 & 30 & 13 & 16 \\
 		\hline
