--- a/testing/mcu-testing.tex
+++ b/testing/mcu-testing.tex
@@ -1,2 +1,39 @@
 \subsection{Controller Subsystem Testing}
 \label{sec:controller_subsystem_testing}
+The MCU subsystem will undergo a littany of testing. The electrical and
+logical characteristics, as well as software behavior will be tested to ensure
+a working product.
+
+% Electrical characteristics (to see what it can handle and what it uses)
+\paragraph{Electrical Characteristics}
+Shutoff current testing \\
+Hibernate current testing \\
+Low power current testing \\
+Active current testing \\
+Shutoff voltage testing \\
+Hibernate voltage testing \\
+Low power voltage testing \\
+Active voltage testing \\
+
+% Logical characteristics (ability to set and use peripherals n stuff)
+\paragraph{Logical Characteristics}
+Upload code \\
+I2C \\
+LEDs \\
+WDT \\
+RTC \\
+WiFi module \\
+GPIO low/high \\
+Interrupts/ISRs \\
+ADC \\
+
+% Software behavior (actual program)
+\paragraph{Software Behavior}
+Reset button \\
+Connect to network \\
+Connect to AWS \\
+Receive over sockets \\
+Send over sockets \\
+Receive command from AWS \\
+Send command to AWS \\
+ISRs \\
