MCU testing elec characteristics.

--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -4,6 +4,7 @@
 \usepackage{gensymb}
 \usepackage[top=1in,left=1.5in,right=1in]{geometry}
 \usepackage{graphicx}
+\usepackage{fixltx2e}
 \usepackage{float}
 \usepackage{tabularx}
 \usepackage{ltablex}
