moved block diagram

--- a/project-description/requirements.tex
+++ b/project-description/requirements.tex
@@ -6,3 +6,8 @@ Find our House of Quality figure below:
     \includegraphics[width=.45\textwidth]{images/HouseOfQuality.PNG}
     \includegraphics[width=.25\textwidth]{images/HouseOfQualityLegend.png}
 \end{figure}
+\begin{figure}[H]
+    \caption{Overall block diagram}
+    \centering
+    \includegraphics[width=\textwidth]{images/Overall Block Diagram.png}
+\end{figure}
